--- a/HW2/Makefile
+++ b/HW2/Makefile
@@ -1,12 +1,18 @@
 NVCC=nvcc
+CC=arm-linux-gnueabihf-g++-4.7
 
 ###################################
 # These are the default install   #
 # locations on most linux distros #
 ###################################
 
-OPENCV_LIBPATH=/usr/lib
-OPENCV_INCLUDEPATH=/usr/include
+CUDA_PATH        := /usr/local/cuda
+CUDA_INCLUDEPATH := $(CUDA_PATH)/include
+export PATH := $(CUDA_PATH)/bin:$(PATH)
+
+OPENCV_PATH        := /home/ender/Downloads/kayla/rootfs/opt/opencv
+OPENCV_LIBPATH     := $(OPENCV_PATH)/lib
+OPENCV_INCLUDEPATH := $(OPENCV_PATH)/include
 
 ###################################################
 # On Macs the default install locations are below #
@@ -16,7 +22,6 @@ OPENCV_INCLUDEPATH=/usr/include
 #OPENCV_INCLUDEPATH=/usr/local/include
 
 OPENCV_LIBS=-lopencv_core -lopencv_imgproc -lopencv_highgui
-CUDA_INCLUDEPATH=/usr/local/cuda-5.0/include
 
 ######################################################
 # On Macs the default install locations are below    #
@@ -25,24 +30,24 @@ CUDA_INCLUDEPATH=/usr/local/cuda-5.0/include
 #CUDA_INCLUDEPATH=/usr/local/cuda/include
 #CUDA_LIBPATH=/usr/local/cuda/lib
 
-NVCC_OPTS=-O3 -arch=sm_20 -Xcompiler -Wall -Xcompiler -Wextra -m64
+NVCC_OPTS=-O3 -arch=sm_35 -target-cpu-arch=ARM -Xcompiler -Wall -Xcompiler -Wextra -m32 -ccbin=$(CC)
 
-GCC_OPTS=-O3 -Wall -Wextra -m64
+GCC_OPTS=-O3 -Wall -Wextra
 
 student: main.o student_func.o compare.o reference_calc.o Makefile
 	$(NVCC) -o HW2 main.o student_func.o compare.o reference_calc.o -L $(OPENCV_LIBPATH) $(OPENCV_LIBS) $(NVCC_OPTS)
 
 main.o: main.cpp timer.h utils.h HW2.cpp
-	g++ -c main.cpp $(GCC_OPTS) -I $(OPENCV_INCLUDEPATH) -I $(CUDA_INCLUDEPATH)
+	$(CC) -c main.cpp $(GCC_OPTS) -I $(OPENCV_INCLUDEPATH) -I $(CUDA_INCLUDEPATH)
 
 student_func.o: student_func.cu reference_calc.cpp utils.h
-	nvcc -c student_func.cu $(NVCC_OPTS)
+	$(NVCC) -c student_func.cu $(NVCC_OPTS)
 
 compare.o: compare.cpp compare.h
-	g++ -c compare.cpp -I $(OPENCV_INCLUDEPATH) $(GCC_OPTS) -I $(CUDA_INCLUDEPATH)
+	$(CC) -c compare.cpp -I $(OPENCV_INCLUDEPATH) $(GCC_OPTS) -I $(CUDA_INCLUDEPATH)
 
 reference_calc.o: reference_calc.cpp reference_calc.h
-	g++ -c reference_calc.cpp -I $(OPENCV_INCLUDEPATH) $(GCC_OPTS) -I $(CUDA_INCLUDEPATH)
+	$(CC) -c reference_calc.cpp -I $(OPENCV_INCLUDEPATH) $(GCC_OPTS) -I $(CUDA_INCLUDEPATH)
 
 clean:
 	rm -f *.o *.png hw
